syntax = "proto3";

option go_package = "graph-bp/service/epul/";
import "google/protobuf/empty.proto";

message People {
    string name = 1;
    int32 age = 2;
    string phone = 3;
    Address address = 4;
}

message Address {
    string province = 1;
    string city = 2;
}

message Peoples {
    repeated People peoples= 1;
}

service PeopleService {
    rpc ListPeople (google.protobuf.Empty) returns (Peoples);
    rpc DetailPeople (People) returns (People);
    rpc AddPeople (People) returns (People);
}